--- a/lib/dedalo/tools/tool_av_versions/html/tool_av_versions_page.phtml
+++ b/lib/dedalo/tools/tool_av_versions/html/tool_av_versions_page.phtml
@@ -9,8 +9,8 @@
 
 
 		$html   .= "\n<script>
-					var video_base_path = '$video_base_path',
-						video_extension = '$video_extension'
+					page_globals.video_base_path = '$video_base_path',
+					page_globals.video_extension = '$video_extension'
 					</script>";
 
 
