--- a/lib/dedalo/tools/tool_image_versions/html/tool_image_versions_page.phtml
+++ b/lib/dedalo/tools/tool_image_versions/html/tool_image_versions_page.phtml
@@ -11,8 +11,8 @@
 
 
 		$html   .= "\n<script>
-					var media_base_path = '$media_base_path',
-						media_extension = '$media_extension'									
+					page_globals.media_base_path = '$media_base_path',
+					page_globals.media_extension = '$media_extension'									
 					</script>";
 
 
