--- a/lib/dedalo/tools/tool_indexation/html/tool_indexation_fragment_info.phtml
+++ b/lib/dedalo/tools/tool_indexation/html/tool_indexation_fragment_info.phtml
@@ -15,17 +15,14 @@
 		case ($permissions>=1)	:			
 			
 			# Fragment info div
-			$html_contenido .= "
-			<div class=\"fragment_id_info\" 
-			 data-section_tipo=\"{$section_tipo}\" data-parent=\"$parent\" data-tipo=\"$tipo\" data-caller_id=\"$caller_id\" data-rel_locator='$rel_locator'		 
-			\"> 
-			 <b>".ucfirst(label::get_label('etiqueta'))." $tag_value </b>
-			</div>
-			";
+			$html_contenido .= "<div class=\"fragment_id_info\" data-section_tipo=\"{$section_tipo}\" data-parent=\"$parent\" data-tipo=\"$tipo\" data-caller_id=\"$caller_id\" data-rel_locator='$rel_locator'>";
+			$html_contenido .= "<b>".ucfirst(label::get_label('etiqueta'))." $tag_value </b>";
+			$html_contenido .= "</div>";			
 
 
 			# TAG STATE SELECTOR
 			$html_contenido .= "\n <div class=\"wrap_tag_state_selector\">";
+
 				#
 				# CURRENT TAG STATE SELECTOR
 				#
@@ -35,40 +32,43 @@
 									'r'=> label::get_label('etiqueta_revisar') // To review
 								  );
 				$html_contenido .= ucfirst(label::get_label('estado')) ;
-				$html_contenido .= "
-				<select class=\"tag_state_selector\" name=\"$name\"
-				data-tag=\"$tag\"
-				onchange=\"component_text_area.change_tag_state(this)\"
-				>
-				";			
-				#$html_contenido .= "\n <option value=\"\"></option>";				
+				$html_contenido .= "<select class=\"tag_state_selector\" name=\"$name\" data-tag=\"$tag\" onchange=\"component_text_area.change_tag_state(this)\">";			
+				#$html_contenido .= "\n <option value=\"\"></option>";
 				foreach ($ar_states as $key => $value) {
 
-					$html_contenido .= "\n <option value=\"$key\" ";
+					$selected = ($tag_state==$key) ? " selected=\"selected\" " : '';
 
-					if($tag_state==$key) 
-						$html_contenido .= " selected=\"selected\" ";
-
-					$html_contenido .= ">$value</option>";
+					$html_contenido .= "\n <option value=\"$key\" $selected >";					
+					$html_contenido .= $value;
+					$html_contenido .= "</option>";
 
 				}			
-				$html_contenido .= "\n</select>\n";
-					#dump($rel_locator_js_pretty,"");
+				$html_contenido .= "\n</select>\n";			
+
 				if(SHOW_DEBUG) {
 					#$html_contenido .= " <span class=\"notas\">$rel_locator</span>";
 					#$html_contenido .= " <pre> ".$rel_locator_js_pretty."</pre>";
 				}
+
 			$html_contenido .= "</div><!-- /wrap_tag_state_selector -->";
 			
 
 			# BUTTON DELETE TAG
-			$html_contenido .= "\n <div class=\"div_delete_tag\" >";
-			$html_contenido .= " <div class=\"icon_bs tool_indexation_delete_icon link\" 
-			data-tipo=\"{$tipo}\" data-section_tipo=\"{$section_tipo}\" data-parent=\"{$parent}\" data-lang=\"{$lang}\" data-tag=\"{$tag}\" data-rel_locator='{$rel_locator}'
-			title=\"Delete tag\"
-			onclick=\"tool_indexation.delete_tag(this)\"
-			></div>";
-			$html_contenido .= "\n Delete tag</div>";	#<div class="css_button_delete div_image_link " data-tipo="dd185" data-id_matrix="1" title="Borrar entrevista"></div>
+			$html_contenido .= "\n <div class=\"div_delete_tag\">";
+
+				$html_contenido .= " <div class=\"icon_bs tool_indexation_delete_icon link\"
+				data-tipo=\"{$tipo}\"
+				data-section_tipo=\"{$section_tipo}\"
+				data-parent=\"{$parent}\"
+				data-lang=\"{$lang}\"
+				data-tag=\"{$tag}\"
+				data-rel_locator='{$rel_locator}'
+				title=\"Delete tag\"
+				onclick=\"tool_indexation.delete_tag(this)\"></div>";
+
+				$html_contenido .= " Delete tag";
+
+			$html_contenido .= "</div>";//end div_delete_tag	
 
 
 			# BUTTON CLOSE
@@ -77,19 +77,19 @@
 			
 
 			# TEXT SELECTED FRAGMENT
-			$html_contenido .= "\n <div class=\"selected_fragment \">{$fragment_text}</div>";			
+			$html_contenido .= "\n <div class=\"selected_fragment\">{$fragment_text}</div>";			
 	}	
 
 
 	# Prepare content to show in page
-	tools::prepare_content($html_contenido);
+	//tools::prepare_content($html_contenido);
 
 
 	# TEXT SELECTED FRAGMENT
 	$html_contenido .= "\n <div class=\"terminos_list\">";
-	$html_contenido .= "\n <div class=\"terminos_list_title\">".label::get_label('descriptores')."</div>";
-	$html_contenido .= $component_text_area_terminos_list_html;
-	$html_contenido .= "\n </div";
+	$html_contenido .= "\n   <div class=\"terminos_list_title\">".label::get_label('descriptores')."</div>";
+	$html_contenido .= 		 $component_text_area_terminos_list_html;
+	$html_contenido .= "\n </div>";
 
 
 
