--- a/lib/dedalo/tools/tool_common/css/tool_common.less
+++ b/lib/dedalo/tools/tool_common/css/tool_common.less
@@ -46,7 +46,8 @@
 	margin-top: 1px;
 	width: auto;
 	min-width: 100px;
-	background-color: rgba(201, 201, 201, 0.3);	
+	background-color: rgba(201, 201, 201, 0.3);
+	float: right;
 	}
 	.btn_inside_section_buttons_container::before {
 		content: '';
