add the hidden option of the edit tool

--- a/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
+++ b/lib/dedalo/component_autocomplete/html/component_autocomplete_edit.phtml
@@ -72,7 +72,7 @@
 							#
 							# BTN EDIT WHOLE SECTION
 							$open_section_id   = null;
-							$html_content .= "<a href=\"javascript:;\" class=\"icon_bs link edit_autocomplete\" onclick=\"component_autocomplete.open_element(this)\" ";
+							$html_content .= "<a href=\"javascript:;\" class=\"icon_bs link edit_hidden edit_autocomplete\" onclick=\"component_autocomplete.open_element(this)\" ";
 							$html_content .= "data-section_tipo=\"$open_section_tipo\" ";
 							$html_content .= "data-section_id=\"$open_section_id\" ";
 							$html_content .= "data-modo=\"list\" ";
