CSS changes to common

--- a/lib/dedalo/common/css/common.less
+++ b/lib/dedalo/common/css/common.less
@@ -793,6 +793,12 @@ label.css_label.tooltips {
 	  z-index: 999;
 	}
 	*/
+	div.tooltip {
+		//background-color: #B8D111;
+		overflow-wrap: break-word;
+  		word-wrap: break-word;
+  		width: 600px;
+	}
 
 	/* LABEL_WARNING (STATE DEPRECATED, ETC)
 	----------------------------------------- */
