Css change of component_publication

--- a/lib/dedalo/component_publication/css/component_publication.less
+++ b/lib/dedalo/component_publication/css/component_publication.less
@@ -13,7 +13,7 @@
 /* WRAP DIV CONTAINER 
 ---------------------------------------------------- */
 .css_wrap_component_publication {
-	line-height: 1.1em;
+	line-height: 1.1em;	
 	}
 	.css_wrap_component_publication > .content_data {
 		padding-top: 0px;
@@ -26,7 +26,36 @@
 			white-space: nowrap;
 			margin-right: 10px;
 		}
-		
+	
+	/* LABEL
+	------------------------------------------------------- */
+	.css_wrap_component_publication > .label {
+
+			
+	}
+
+
+	/* EDIT DEFAULTS WRAP AND LABEL
+	------------------------------------------------------- */
+	.css_wrap_component_publication_edit {
+			// En pruebas como default
+			min-height: 4.667em;
+			//border-right: 1px solid #ebebeb;
+			padding-left: 10px;
+			padding-right: 10px;
+			width: 10%;
+		}
+		.css_wrap_component_publication_edit > .css_label {
+			// En pruebas como default
+			width: initial;
+			max-width: initial;
+			min-height: initial;
+			padding-left: 0;
+		}
+		.css_wrap_component_publication_edit > .content_data {
+			// En pruebas como default
+			//width: 100%;
+		}
 		
 	
 
