--- a/lib/dedalo/component_section_id/css/component_section_id.less
+++ b/lib/dedalo/component_section_id/css/component_section_id.less
@@ -19,16 +19,56 @@
     border-right: 1px solid #ebebeb;
     border-bottom-right-radius: 8px;*/
 
-    background-color: rgba(129,129,129,0.8);
-    color: #FFFFFF !important;
+    
 	}
+
+
+	/* EDIT DEFAULTS WRAP AND LABEL
+	------------------------------------------------------- */
+	.css_wrap_section_id_edit {
+		background-color: rgba(129,129,129,0.8);
+    	color: #FFFFFF !important;
+
+		// En pruebas como default
+		min-height: 4.667em;
+		border-right: 1px solid #ebebeb;
+		padding-left: 10px;
+		padding-right: 10px;
+		background-color: rgba(129,129,129,0.8);
+		color: #fff !important;
+		width: 8%;
+		border-bottom-right-radius: 8px;
+		}
+		.css_wrap_section_id_edit > .css_label {
+			// En pruebas como default
+			max-width: initial;
+			width: initial;
+		}
+		.css_wrap_section_id_edit > .content_data {
+			// En pruebas como default
+			width: 100%;
+		}
+
+
+
+	/* LABEL
+	------------------------------------------------------- */
+	.css_wrap_section_id > .css_label {
+		/*
+		width: 100%;
+		max-width: 100%;
+		min-height: initial;
+		padding-left: 0;*/		
+	}	
 
 
 
 	/* CONTENT_DATA
 	------------------------------------------------------- */
 	.css_wrap_section_id .content_data {
-		display: inline-block;		
+		display: inline-block;
+
+		
 		}
 
 
@@ -46,15 +86,6 @@
 
 
 
-		/* LABEL
-		------------------------------------------------------- */
-		.css_wrap_section_id > .css_label {
-			/*
-			width: 100%;
-			max-width: 100%;
-			min-height: initial;
-			padding-left: 0;*/
-		}
-		
+
 
     
