--- a/lib/dedalo/publication/client_api/v1/sample2/free_search/html/free_search_content.phtml
+++ b/lib/dedalo/publication/client_api/v1/sample2/free_search/html/free_search_content.phtml
@@ -1,13 +1,13 @@
 <div id="free_search_content">
 <form>
-	<h2>Free</h2> <input type="text" name="q" value="<?php echo htmlspecialchars($options->q) ?>"><input type="submit" value="Search">
+	<h2>Free</h2> <input type="text" name="q" value="<?php echo htmlspecialchars($q_raw) ?>"><input type="submit" value="Search">
 </form>
 
-<?php if (empty($data->result) && !empty($_REQUEST["q"])) { ?>
+<?php if(empty($data->result) && !empty($_REQUEST["q"])) { ?>
 	<h3>Sorry. Nothing found for: <?php echo $options->q ?></h3>
 <?php } ?>	
 
-<?php foreach ($data->result as $key => $row) { ?>
+<?php if(!empty($data->result)) foreach ($data->result as $key => $row) { ?>
 	
 	<div><hr>Interview</div>
 	<div><strong>Code:</strong> <?php echo $row->code ?></div>
