--- a/lib/dedalo/component_iri/html/component_iri_edit.phtml
+++ b/lib/dedalo/component_iri/html/component_iri_edit.phtml
@@ -74,20 +74,20 @@
 						$html_contenido .= "<li class=\"input-group\">";
 
 						# Input
-						$html_contenido .= "<input type=\"text\" id=\"{$id_wrapper}_input_{$key}\" class=\"form-control99 css_iri\" onchange=\"component_iri.Save(this)\"
-						data-tipo=\"{$tipo}\"
-						data-section_tipo=\"{$section_tipo}\"
-						data-parent=\"{$parent}\"
-						data-lang=\"{$lang}\"
-						data-mandatory='{$mandatory_json}'
-						value=\"{$value}\"
-						title=\"$html_title\"
-						name=\"{$input_name}\"
-						autocomplete=\"off\"
-						$remove_autocomplete
-						$read_only
-						tabindex=\"1\"						
-						/>";
+						$html_contenido .= "<input type=\"text\" id=\"{$id_wrapper}_input_{$key}\" class=\"form-control99 css_iri\" onchange=\"component_iri.Save(this)\" ";
+						$html_contenido .= "data-tipo=\"{$tipo}\" ";
+						$html_contenido .= "data-section_tipo=\"{$section_tipo}\" ";
+						$html_contenido .= "data-parent=\"{$parent}\" ";
+						$html_contenido .= "data-lang=\"{$lang}\" ";
+						$html_contenido .= "data-mandatory='{$mandatory_json}' ";
+						$html_contenido .= "value=\"{$value}\" ";
+						$html_contenido .= "title=\"$html_title\" ";
+						$html_contenido .= "name=\"{$input_name}\" ";
+						$html_contenido .= "autocomplete=\"off\" ";
+						$html_contenido .= $remove_autocomplete." ";
+						$html_contenido .= $read_only." ";
+						$html_contenido .= "tabindex=\"1\" ";					
+						$html_contenido .= "/>";
 
 						# Button link
 						$html_contenido .= "<a class=\"input-group-addon css_button_generic btn_go_iri\" onclick=\"component_iri.go_iri_link(this)\">";
@@ -99,11 +99,11 @@
 					}//end foreach
 					$html_contenido .= "</ul>";
 
-					/*
-					<div class="input-group">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
-  <span class="input-group-addon" id="basic-addon2">@example.com</span>
-</div>*/
+					
+					#<div class="input-group">
+					#  <input type="text" class="form-control" placeholder="Recipient's username" aria-describedby="basic-addon2">
+					#  <span class="input-group-addon" id="basic-addon2">@example.com</span>
+					#</div>
 					
 
 					#$html_contenido .= "<script>setAttribute(“autocomplete”,”off”)</script>";
@@ -112,6 +112,7 @@
 
 					#$html_contenido .= " <span  class=\"css_span_log\"></span>";
 					#$html_contenido .= " <span  class=\"css_span_ejemplo\">$ejemplo</span>";
+
 
 					if(SHOW_DEBUG===true) {
 						$html_contenido .= " <span class=\"debug_info notes\">".$dato_json."</span>";
